// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageUsers regular list of users disables logged-in user's settings 1`] = `
<div>
  <div
    class="prime-container card-container"
  >
    <div
      class="usa-card__header"
    >
      <h2>
        Manage Users
      </h2>
      <button
        class="usa-button usa-button--outline"
        type="button"
      >
        + New user
      </button>
    </div>
    <div
      class="usa-card__body"
    >
      <div
        class="grid-row"
      >
        <div
          class="display-block users-sidenav"
        >
          <h3>
            Users
          </h3>
          <ul
            class="usa-sidenav"
          >
            <li
              class="usa-sidenav__item users-sidenav-item"
            >
              <button
                class="usa-button--unstyled text-ink text-no-underline padding-105 padding-right-2"
                style="cursor: pointer;"
              >
                <span
                  class="sidenav-user-name"
                >
                  Arthur, John
                </span>
                <br />
                <span
                  class="sidenav-user-email"
                >
                  john@arthur.org
                </span>
              </button>
            </li>
            <li
              class="usa-sidenav__item users-sidenav-item"
            >
              <button
                class="usa-button--unstyled text-ink text-no-underline padding-105 padding-right-2 usa-current"
                style="cursor: pointer;"
              >
                <span
                  class="sidenav-user-name"
                >
                  Bobberoo, Bob
                </span>
                <br />
                <span
                  class="sidenav-user-email"
                >
                  bob@bobberoo.org
                </span>
              </button>
            </li>
          </ul>
        </div>
        <div
          class="tablet:grid-col padding-left-2"
        >
          <div
            class="user-header grid-row flex-row flex-align-center"
          >
            <h2
              class="display-inline-block margin-y-1"
            >
              Bob Bobberoo
            </h2>
            <span
              class="usa-tag margin-left-1 bg-base-lighter text-ink"
            >
              YOU
            </span>
          </div>
          <div
            class="user-content"
          >
            <p
              class="text-base"
            >
              Admins have full access to conduct tests, manage results and profiles, and manage settings and users
            </p>
            <div
              class=""
            >
              <fieldset
                class="usa-fieldset prime-radios margin-top-neg-1 margin-bottom-4"
              >
                <legend
                  class="usa-legend usa-sr-only"
                >
                  Roles
                </legend>
                <div
                  class="usa-form-group"
                >
                  <div
                    class="usa-radio"
                  >
                    <input
                      class="usa-radio__input"
                      data-required="false"
                      disabled=""
                      id="4-val-ADMIN"
                      name="role"
                      type="radio"
                      value="ADMIN"
                    />
                    <label
                      class="usa-radio__label text-base"
                      for="4-val-ADMIN"
                    >
                      Admin (full permissions)
                    </label>
                  </div>
                  <div
                    class="usa-radio"
                  >
                    <input
                      checked=""
                      class="usa-radio__input"
                      data-required="false"
                      disabled=""
                      id="4-val-USER"
                      name="role"
                      type="radio"
                      value="USER"
                    />
                    <label
                      class="usa-radio__label text-base"
                      for="4-val-USER"
                    >
                      Standard user (manage results and profiles)
                    </label>
                  </div>
                  <div
                    class="usa-radio"
                  >
                    <input
                      class="usa-radio__input"
                      data-required="false"
                      disabled=""
                      id="4-val-ENTRY_ONLY"
                      name="role"
                      type="radio"
                      value="ENTRY_ONLY"
                    />
                    <label
                      class="usa-radio__label text-base"
                      for="4-val-ENTRY_ONLY"
                    >
                      Entry only (conduct tests)
                    </label>
                  </div>
                </div>
              </fieldset>
            </div>
            <h3
              class="margin-bottom-0"
            >
              Facility access
               
            </h3>
            <p
              class="text-base"
            >
              Admins have access to all facilities
            </p>
            <fieldset
              class="usa-fieldset prime-checkboxes"
            >
              <legend
                class="usa-legend usa-sr-only"
              >
                Access all facilities
              </legend>
              <div
                class="usa-form-group"
              >
                <div
                  class="usa-checkbox"
                >
                  <input
                    class="usa-checkbox__input"
                    disabled=""
                    id="5-val-0"
                    name="all-facilities"
                    type="checkbox"
                    value="ALL_FACILITIES"
                  />
                  <label
                    class="usa-checkbox__label"
                    for="5-val-0"
                  >
                    Access all facilities
                  </label>
                </div>
              </div>
            </fieldset>
            <table
              class="usa-table usa-table--borderless user-facilities"
              style="width: 100%;"
            >
              <tbody>
                <tr>
                  <td>
                    Bar Org
                  </td>
                  <td>
                    <button
                      aria-label="Remove facility: Bar Org"
                      class="remove-tag usa-button--unstyled remove-tag--disabled"
                      disabled=""
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-minus-circle fa-w-16 prime-red-icon"
                        data-icon="minus-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zM124 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H124z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
                <tr>
                  <td>
                    Foo Org
                  </td>
                  <td>
                    <button
                      aria-label="Remove facility: Foo Org"
                      class="remove-tag usa-button--unstyled remove-tag--disabled"
                      disabled=""
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-minus-circle fa-w-16 prime-red-icon"
                        data-icon="minus-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zM124 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H124z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            class="usa-card__footer display-flex flex-justify margin-top-5 padding-x-0"
          >
            <button
              class="usa-button usa-button--outline usa-button-disabled flex-align-self-start display-inline-block"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-trash fa-w-14 margin-right-1"
                data-icon="trash"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                  fill="currentColor"
                />
              </svg>
              Remove user
            </button>
            <button
              class="usa-button"
              type="button"
            >
              Save changes
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManageUsers regular list of users displays the list of users and defaults to the first user 1`] = `
<div>
  <div
    class="prime-container card-container"
  >
    <div
      class="usa-card__header"
    >
      <h2>
        Manage Users
      </h2>
      <button
        class="usa-button usa-button--outline"
        type="button"
      >
        + New user
      </button>
    </div>
    <div
      class="usa-card__body"
    >
      <div
        class="grid-row"
      >
        <div
          class="display-block users-sidenav"
        >
          <h3>
            Users
          </h3>
          <ul
            class="usa-sidenav"
          >
            <li
              class="usa-sidenav__item users-sidenav-item"
            >
              <button
                class="usa-button--unstyled text-ink text-no-underline padding-105 padding-right-2 usa-current"
                style="cursor: pointer;"
              >
                <span
                  class="sidenav-user-name"
                >
                  Arthur, John
                </span>
                <br />
                <span
                  class="sidenav-user-email"
                >
                  john@arthur.org
                </span>
              </button>
            </li>
            <li
              class="usa-sidenav__item users-sidenav-item"
            >
              <button
                class="usa-button--unstyled text-ink text-no-underline padding-105 padding-right-2"
                style="cursor: pointer;"
              >
                <span
                  class="sidenav-user-name"
                >
                  Bobberoo, Bob
                </span>
                <br />
                <span
                  class="sidenav-user-email"
                >
                  bob@bobberoo.org
                </span>
              </button>
            </li>
          </ul>
        </div>
        <div
          class="tablet:grid-col padding-left-2"
        >
          <div
            class="user-header grid-row flex-row flex-align-center"
          >
            <h2
              class="display-inline-block margin-y-1"
            >
              John Arthur
            </h2>
          </div>
          <div
            class="user-content"
          >
            <p
              class="text-base"
            >
              Admins have full access to conduct tests, manage results and profiles, and manage settings and users
            </p>
            <div
              class=""
            >
              <fieldset
                class="usa-fieldset prime-radios margin-top-neg-1 margin-bottom-4"
              >
                <legend
                  class="usa-legend usa-sr-only"
                >
                  Roles
                </legend>
                <div
                  class="usa-form-group"
                >
                  <div
                    class="usa-radio"
                  >
                    <input
                      class="usa-radio__input"
                      data-required="false"
                      id="1-val-ADMIN"
                      name="role"
                      type="radio"
                      value="ADMIN"
                    />
                    <label
                      class="usa-radio__label"
                      for="1-val-ADMIN"
                    >
                      Admin (full permissions)
                    </label>
                  </div>
                  <div
                    class="usa-radio"
                  >
                    <input
                      checked=""
                      class="usa-radio__input"
                      data-required="false"
                      id="1-val-USER"
                      name="role"
                      type="radio"
                      value="USER"
                    />
                    <label
                      class="usa-radio__label"
                      for="1-val-USER"
                    >
                      Standard user (manage results and profiles)
                    </label>
                  </div>
                  <div
                    class="usa-radio"
                  >
                    <input
                      class="usa-radio__input"
                      data-required="false"
                      id="1-val-ENTRY_ONLY"
                      name="role"
                      type="radio"
                      value="ENTRY_ONLY"
                    />
                    <label
                      class="usa-radio__label"
                      for="1-val-ENTRY_ONLY"
                    >
                      Entry only (conduct tests)
                    </label>
                  </div>
                </div>
              </fieldset>
            </div>
            <h3
              class="margin-bottom-0"
            >
              Facility access
               
            </h3>
            <p
              class="text-base"
            >
              All users must have access to at least one facility
            </p>
            <fieldset
              class="usa-fieldset prime-checkboxes"
            >
              <legend
                class="usa-legend usa-sr-only"
              >
                Access all facilities
              </legend>
              <div
                class="usa-form-group"
              >
                <div
                  class="usa-checkbox"
                >
                  <input
                    class="usa-checkbox__input"
                    id="2-val-0"
                    name="all-facilities"
                    type="checkbox"
                    value="ALL_FACILITIES"
                  />
                  <label
                    class="usa-checkbox__label"
                    for="2-val-0"
                  >
                    Access all facilities
                  </label>
                </div>
              </div>
            </fieldset>
            <table
              class="usa-table usa-table--borderless user-facilities"
              style="width: 100%;"
            >
              <tbody>
                <tr>
                  <td
                    colspan="2"
                  >
                    Please add at least one facility
                  </td>
                </tr>
              </tbody>
            </table>
            <form
              class="display-flex flex-align-end"
            >
              <div>
                <label
                  class="text-bold"
                  for="select-facility"
                >
                  Add facility
                </label>
                <div
                  class="usa-form-group prime-dropdown  width-card-lg"
                >
                  <select
                    aria-required="false"
                    class="usa-select"
                    id="select-facility"
                  >
                    <option
                      value=""
                    >
                      - Select -
                    </option>
                    <option
                      value="a2"
                    >
                      Bar Org
                    </option>
                    <option
                      value="a1"
                    >
                      Foo Org
                    </option>
                  </select>
                </div>
              </div>
              <button
                class="usa-button usa-button--outline height-5 margin-left-2"
                type="button"
              >
                Add
              </button>
            </form>
          </div>
          <div
            class="usa-card__footer display-flex flex-justify margin-top-5 padding-x-0"
          >
            <button
              class="usa-button usa-button--outline flex-align-self-start display-inline-block"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-trash fa-w-14 margin-right-1"
                data-icon="trash"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                  fill="currentColor"
                />
              </svg>
              Remove user
            </button>
            <button
              class="usa-button usa-button-disabled"
              disabled=""
              type="button"
            >
              Save changes
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
